[FIX] Only set table-row for kanban view (for drag and drop), Else the switch between eg view Calendar and view form (without pass by another view (on IE)) does not work properly.
lp bug: https://launchpad.net/bugs/1294059 fixed
lp bug: https://launchpad.net/bugs/1097219 fixed

bzr revid: jke@openerp.com-20140318165622-kb4j5zz899lciz8v

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -1037,10 +1037,12 @@ $sheet-padding: 16px
         height: inherit
         width: 100%
         .oe_view_manager_body
-            display: table-row
             height: inherit
         .oe_view_manager_view_kanban:not(:empty)
             height: inherit
+        &[data-view-type=kanban]
+            .oe_view_manager_body
+                display: table-row
 
         table.oe_view_manager_header
             border-collapse: separate
